[tool.poetry]
name = "aiobotocore"
version = "1.1.2"
description = "Async client for aws services using botocore and aiohttp"
authors = ["Nikolay Novik <nickolainovik@gmail.com>"]
license = "Apache-2.0"

readme = "README.rst"  # Markdown files are supported too

repository = "https://github.com/aio-libs/aiobotocore"
homepage = "http://aiobotocore.readthedocs.io"

keywords = [
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Environment :: Web Environment',
    'Development Status :: 3 - Alpha',
    'Framework :: AsyncIO',
]

include = ["aiobotocore/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "aiobotocore"}
]


[tool.poetry.dependencies]
python = "^3.6"

botocore = "~1.17.40"
boto3 = {version = "~1.14.40", optional = true}
awscli = {version = "^1.18.0", optional = true}

aiohttp = "^3.7.2"
wrapt = "^1.12.1"
aioitertools = "^0.7.0"


[tool.poetry.extras]
all = [
    "awscli",
    "boto3",
]
awscli = ["awscli"]
boto3 = ["boto3"]


[tool.poetry.dev-dependencies]

# In development, pin the AWS SDK libs to compatible
# versions provided by AWS lambda python runtime.
boto3 = "~1.14.40"
botocore = "~1.17.40"
moto = {version = "~1.3.16", extras = ["server"]}

# requirements.dev is used to manage and install other
# development dependencies, to avoid excessive delays
# in poetry dep-tree resolution for all project + dev deps;
# this also helps to avoid excess conflicts between dev-deps
# and actual project dependencies.  It is not as reliable
# as using poetry to manage it all, so liberal use of
# 'pip check' is recommended.


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
